# circle-cmake

./: .gitignore  CMakeLists.txt  CMakeSettings.json  baremetal.toolchain
addon/: CMakeLists.txt
addon/fatfs/: CMakeLists.txt
cmake/: functions.cmake
lib/: CMakeLists.txt
lib/fs/: CMakeLists.txt
lib/fs/fat/: CMakeLists.txt
lib/input/: CMakeLists.txt
lib/net/: CMakeLists.txt
lib/sched/: CMakeLists.txt
lib/sound/: CMakeLists.txt
lib/usb/: CMakeLists.txt
lib/usb/gadget/: CMakeLists.txt
sample/: CMakeLists.txt
sample/01-gpiosimple/: CMakeLists.txt
sample/02-screenpixel/: CMakeLists.txt
sample/03-screentext/: CMakeLists.txt
sample/04-timer/: CMakeLists.txt
sample/05-usbsimple/: CMakeLists.txt
sample/06-ethernet/: CMakeLists.txt
sample/07-usbstorage/: CMakeLists.txt
sample/08-usbkeyboard/: CMakeLists.txt
sample/09-softserial/: CMakeLists.txt
sample/10-usbmouse/: CMakeLists.txt
sample/11-gpioclock/: CMakeLists.txt
sample/12-pwmsound/: CMakeLists.txt
sample/13-pwmoutput/: CMakeLists.txt
sample/14-usbprinter/: CMakeLists.txt
sample/15-files/: CMakeLists.txt
sample/15-files/create-image/: CMakeLists (2).txt
sample/16-i2cping/: CMakeLists.txt
sample/16-i2cping/master/: CMakeLists.txt
sample/16-i2cping/slave/: CMakeLists.txt
sample/17-fractal/: CMakeLists.txt
sample/18-ntptime/: CMakeLists.txt
sample/19-tasks/: CMakeLists.txt
sample/20-tcpsimple/: CMakeLists.txt
sample/21-webserver/: CMakeLists.txt
sample/23-spisimple/: CMakeLists.txt
sample/24-hwrandom/: CMakeLists.txt
sample/25-spidma/: CMakeLists.txt
sample/26-cpustress/: CMakeLists.txt
sample/27-usbgamepad/: CMakeLists.txt
sample/28-touchscreen/: CMakeLists.txt
sample/29-miniorgan/: CMakeLists.txt
sample/30-gpiofiq/: CMakeLists.txt
sample/31-webclient/: CMakeLists.txt
sample/32-i2cshell/: CMakeLists.txt
sample/33-syslog/: CMakeLists.txt
sample/34-sounddevices/: CMakeLists.txt
sample/35-mqttclient/: CMakeLists.txt
sample/36-softpwm/: CMakeLists.txt
sample/37-showgamepad/: CMakeLists.txt
sample/37-showgamepad/create-image/: CMakeLists.txt
sample/38-bootloader/: CMakeLists.txt
sample/39-umsdplugging/: CMakeLists.txt
sample/40-irqlatency/: CMakeLists.txt
sample/41-screenanimations/: CMakeLists.txt
sample/42-soundinput/: CMakeLists.txt
tools/: CMakeLists.txt  build-all-rpi3.bat  build-all-rpi4.bat  build-all-rpi5.bat  build-image-rpi3.bat  build-image-rpi4.bat  build-image-rpi5.bat  build-target-rpi3.bat  build-target-rpi4.bat  build-target-rpi5.bat  clean-all-rpi3.bat  clean-all-rpi4.bat  clean-all-rpi5.bat  configure-rpi3.bat  configure-rpi4.bat  configure-rpi5.bat  gdb-commands.txt  startQEMU-image-uart0-rpi3.bat  startQEMU-image-uart0-rpi4.bat  startQEMU-image-uart1-rpi3.bat  startQEMU-image-uart1-rpi4.bat  startgdb.bat
