message(STATUS "\n**********************************************************************************\n")
message(STATUS "\n## In directory: ${CMAKE_CURRENT_SOURCE_DIR}")

add_subdirectory(01-gpiosimple)
add_subdirectory(02-screenpixel)
add_subdirectory(03-screentext)
add_subdirectory(04-timer)
add_subdirectory(05-usbsimple)
add_subdirectory(06-ethernet)
add_subdirectory(07-usbstorage)
add_subdirectory(08-usbkeyboard)
add_subdirectory(09-softserial)
add_subdirectory(10-usbmouse)
add_subdirectory(11-gpioclock)
add_subdirectory(12-pwmsound)
add_subdirectory(13-pwmoutput)
add_subdirectory(14-usbprinter)
add_subdirectory(15-files)
add_subdirectory(16-i2cping)
add_subdirectory(17-fractal)
add_subdirectory(18-ntptime)
add_subdirectory(19-tasks)
add_subdirectory(20-tcpsimple)
