message(STATUS "\n**********************************************************************************\n")
message(STATUS "\n## In directory: ${CMAKE_CURRENT_SOURCE_DIR}")

add_subdirectory(01-gpiosimple)
add_subdirectory(02-screenpixel)
add_subdirectory(03-screentext)
add_subdirectory(04-timer)
add_subdirectory(05-usbsimple)
add_subdirectory(06-ethernet)
add_subdirectory(07-usbstorage)
add_subdirectory(08-usbkeyboard)
add_subdirectory(09-softserial)
add_subdirectory(10-usbmouse)
add_subdirectory(11-gpioclock)
add_subdirectory(12-pwmsound)
add_subdirectory(13-pwmoutput)
add_subdirectory(14-usbprinter)
add_subdirectory(15-files)
add_subdirectory(16-i2cping)
add_subdirectory(17-fractal)
add_subdirectory(18-ntptime)
add_subdirectory(19-tasks)
add_subdirectory(20-tcpsimple)
add_subdirectory(21-webserver)
add_subdirectory(23-spisimple)
add_subdirectory(24-hwrandom)
add_subdirectory(25-spidma)
add_subdirectory(26-cpustress)
add_subdirectory(27-usbgamepad)
add_subdirectory(28-touchscreen)
add_subdirectory(29-miniorgan)
add_subdirectory(30-gpiofiq)
add_subdirectory(31-webclient)
add_subdirectory(32-i2cshell)
add_subdirectory(33-syslog)
add_subdirectory(34-sounddevices)
add_subdirectory(35-mqttclient)
add_subdirectory(36-softpwm)
add_subdirectory(37-showgamepad)
add_subdirectory(38-bootloader)
add_subdirectory(39-umsdplugging)
add_subdirectory(40-irqlatency)
add_subdirectory(41-screenanimations)
#add_subdirectory(42-soundinput)
